# stm_cmake_example

./: .gitignore  CMakeLists.txt  README.md
firmware/: CMakeLists.txt  crosscompile.cmake
firmware/Application/: app.cpp  app.hpp  appWrapper.h
firmware/Core/Src/: main.c
firmware/Drivers/: CMakeLists.txt
firmware/Utils/: CMakeLists.txt
firmware/Utils/random/: random.c  random.h
firmware/Utils/test/: CMakeLists.txt  ut_random.cpp
